2024-03-25 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc:
	  Improve generalized constant propagation analysis accuracy.
	* src/stm8/peep.c,
	  src/z80/peep.c:
	  Fix a peephole optimizer issue in the handling of register parameters to calls through function pointers when a symbol had the same name as a register.

2024-03-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  support/regression/tests/bug-3717.c:
	  Fix bug #3717.

2024-03-23 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/SDCCgenconstprop.cc,
	  src/pdk/gen.c:
	  Improve generalized constant propagation analysis accuracy.

2024-03-18 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/z80/ralloc2.cc:
	  Improve use of hl for --reserve-regs-iy.

2024-03-17 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/peeph.def:
	  Optimize out some tnz(w).

2024-03-16 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/stm8/peeph.def:
	  Simplify some stm8 pushw, common at beginning of function.

2024-03-03 Benedikt Freisen <b.freisen AT gmx.net>

	* src/SDCCgenconstprop.cc:
	  Remove semicolon after if-condition. (bug #3713)

2024-03-01 Philipp Klaus Krause <philipp@colecovision.eu>

	* doc/sdccman.lyx:
	  Workaround for a LyX 2.4 issue, fixes bug #3708.

2024-02-29 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  change safeLabelKey2num macro to safeLabeNum function.

2024-02-29 Philipp Klaus Krause <philipp@colecovision.eu>

	* src/mcs51/gen.c,
	  src/SDCCsymt.c,
	  support/regression/tests/bug-3711.c:
	  Fix bug #3711.

2024-02-20 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Rename jflag in genIfxJump from "a" to "z".
	  Refactor genAnd, GenOr, GenXor.
	
2024-02-19 Gabriele Gorla <gorlik@yahoo.com>

	* src/mos6502/gen.c:
	  Remove a few dead code paths.
	  Improve tracking of literals in the RegTemp stack.
	* src/mos6502/peeph.def:
	  Add rule for tax/tay followed by tax/tay.
	